--- a/webroot/site_style.css
+++ b/webroot/site_style.css
@@ -47,6 +47,10 @@
       margin-left:10px;
       margin:10px;
     }
+    body article {
+      margin-left:10px;
+      margin-right:10px;
+    }
   }
 
 
