--- a/node/src/slides.scss
+++ b/node/src/slides.scss
@@ -148,7 +148,7 @@
       right:0px;
       bottom:0px;
     }
-    .legend-container {
+    .legend-and-notes {
       @media (min-width:994px) {
         left:540px;
       }
