various fixes and improvements prior to launch

--- a/node/src/app.scss
+++ b/node/src/app.scss
@@ -228,7 +228,8 @@ body, html {
     height:100%;
     top:0;
     left:0;
-    visibility:hidden
+    visibility:hidden;
+    z-index:10000;
   }
   .map-inner-lightbox {
     position:absolute;
@@ -425,6 +426,7 @@ body, html {
         text-indent:-10px;
         padding-left:10px;
       }
+      table {border:0px;padding:0px;margin:0px;}
       tr:nth-child(2n) {
         td {
           background-color: #eee;
@@ -434,6 +436,8 @@ body, html {
         padding-top:2px;
         padding-bottom:2px;
         text-align:right;
+        font-size:inherit;
+        font-family:inherit;
       }
       td:first-child {
         padding-left:10px;
