--- a/node/src/slides.scss
+++ b/node/src/slides.scss
@@ -121,12 +121,22 @@
       display:none;
     }
     .map-title {
+      .figure-label {
+        text-align: center;
+        text-transform: uppercase;
+        font-size:11pt;
+        margin-bottom:-1em;
+        @media (min-width:994px) {
+          margin-left:540px;
+        }
+      }
       position:fixed;
       left:0;
       top:0;
       text-align:center;
       background-color: #fff;
       border-bottom:1px solid #000;
+      z-index:100;
       h4 {
         max-width:none;
         padding:10pt;
